--- a/styles/main.css
+++ b/styles/main.css
@@ -437,7 +437,7 @@ a.userMenuLink:hover {transform: translateX(-20px);}
 .blockText {
     width: 100%;
     height: 50px;
-    line-height: 1px;
+    line-height: 1em;
     text-align: center;
     font-size: 1.4em;
 	}
